--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@
 :root {
       --bgcolor: #000;
       --bgcolor_test: #333;
-      --color: #fff;
+      --color: whitesmoke;
       --padding: 1rem;
       --padding-tb: 0.25em;
       --padding-side: 2.5%;
@@ -44,7 +44,7 @@ a:hover {
 /* HEADER */
 .header {
       background-color: #202020;
-      color: #fff;
+      color: var(--color);
       padding: 1.5rem;
 }
 
@@ -57,7 +57,8 @@ a:hover {
 }
 
 div.search {
-      color: red;
+      background-color: hsla(0, 0%, 20%, 0.8);
+      color: var(--color);
       width: 20vw;
       padding: 0.25em;
       border: var(--color);
@@ -78,7 +79,7 @@ div.search {
       position: sticky;
       top: 0;
       width: 100%;
-      background-color: #332;
+      background-color: rgb(49, 49, 49);
       border-bottom: #fff;
 }
 
