--- a/css/style.css
+++ b/css/style.css
@@ -49,7 +49,7 @@ a:hover {
 
 /* HEADER */
 .header {
-      background-image: radial-gradient(rgb(0, 0, 120), #070713);
+      background-image: radial-gradient(rgb(0, 0, 80), #070713);
       padding: var(--padding);
       color: var(--color);
       height: 15vh;
@@ -62,7 +62,12 @@ a:hover {
       justify-content: center;
 }
 
-.figure__h1 {
+/* .header__div {
+      adauga header-ul si imaginea intr-un singur div 
+} 
+*/
+
+.header__figure {
       display: flex;
       position: absolute;
       top: 2vh;
@@ -86,6 +91,8 @@ div.search {
 }
 
 /* MAIN */
+
+/* main {}
 
 /* nav bar */
 .main__nav {
