--- a/css/style.css
+++ b/css/style.css
@@ -1,23 +1,17 @@
-@import url('https://fonts.googleapis.com/css2?family=Sixtyfour&family=Urbanist:ital,wght@0,100..900;1,100..900&display=swap');
-/*search for a font*/
+@import url('https://fonts.googleapis.com/css2?family=Nunito&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Audiowide');
+
 * {
       padding: 0%;
       margin: 0%;
       box-sizing: border-box;
-      font-family: "Urbanist", sans-serif;
-}
-
-img {
-      display: block;
-      width: 100%;
-      height: auto;
-      border-radius: 50%;
+      font-family: "Nunito", "Courier New", sans-serif;
 }
 
 :root {
       --bgcolor: #030303;
       /*       --bgcolor_test: #333; */
-      --color: #FFFCEB;
+      --color: #fffceb;
       --padding: 1rem;
       --margin: 1rem;
 }
@@ -30,8 +24,27 @@ html {
       scroll-behavior: smooth;
 }
 
+
+section {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+}
+
+p,
+a,
+li {
+      font-size: 20px;
+}
+
 p {
       padding: 1.5rem;
+}
+
+h2 {
+      color: whitesmoke;
+      padding-bottom: 10px;
+      font-size: 30px;
 }
 
 a,
@@ -40,69 +53,75 @@ a:visited {
       text-decoration: underline #fff1aa;
 }
 
-a:active,
-a:hover {
-      color: #FFE666;
-}
-
 ul {
       padding: var(--padding);
+      list-style-type: circle;
+      list-style-image: url();
 }
 
 li {
       margin-left: 15px;
 }
 
-section {
+a:active,
+a:hover {
+      color: #FFE666;
+}
+
+img {
+      display: block;
+      width: 100%;
+      height: auto;
+      border-radius: 50%;
+}
+
+figcaption {
       display: flex;
-      flex-direction: column;
-      align-items: center;
+      justify-content: center;
 }
-
-h2 {
-      color: #FFF4CC;
-      padding-bottom: 10px;
-}
-
 
 /* || ELEMENTS || */
 
 /* HEADER */
 .header {
-      background-image: radial-gradient(rgb(0, 0, 80), #070713);
-      /*       padding: var(--padding); */
+      background-image: radial-gradient(rgb(0, 0, 53), #070713);
       color: var(--color);
       height: 100px;
 }
 
 .header__div {
-      width: 300px;
-      height: inherit;
+      display: flex;
+      position: absolute;
+      left: 90px;
+      top: 25px;
 }
 
-.header__h1 {
+.header__p {
+      padding: 0px;
+      font-family: "Audiowide", sans-serif;
+      font-size: 40px;
       height: 50px;
       display: flex;
       position: relative;
-      top: 25px;
       justify-content: center;
       z-index: 1;
 }
 
 .header__figure {
-      width: 300px;
-      height: 80px;
+      width: 450px;
+      height: 100px;
       display: flex;
       position: absolute;
-      top: 5px;
+      top: -25px;
+      left: -65px;
 }
 
 .search {
       background-color: hsla(0, 0%, 20%, 0.6);
-      color: var(--color);
+      color: hsla(51, 100%, 96%, 75%);
       width: 20vw;
       padding: 0.25em;
-      border: var(--color);
+      border: #eee;
       border-style: solid;
       border-radius: 1em;
       display: flex;
@@ -112,9 +131,10 @@ h2 {
       left: 70%;
 }
 
-/* MAIN */
 
-/* main {}
+
+
+/* MAIN */
 
 /* nav bar */
 .main__nav {
@@ -145,11 +165,6 @@ h2 {
 }
 
 /* main sections */
-.main__h1 {
-      color: var(--color);
-      width: 100%;
-      padding: var(--padding-tb) var(--padding-side);
-}
 
 .main__description {
       padding: var(--padding);
@@ -161,7 +176,7 @@ h2 {
       animation: showDescription 4.5s;
 }
 
-@keyframes showDescription {
+/* @keyframes showDescription {
       0% {
             opacity: 0%;
 
@@ -170,7 +185,7 @@ h2 {
       100% {
             opacity: 100%;
       }
-}
+} */
 
 .main__types {
       color: var(--color);
@@ -231,7 +246,7 @@ h2 {
       animation: showHeadset ease-in-out 4s;
 }
 
-@keyframes showHeadset {
+/* @keyframes showHeadset {
       0% {
             opacity: 0%;
             top: -50px;
@@ -246,7 +261,7 @@ h2 {
             opacity: 100%;
             top: 0px;
       }
-}
+} */
 
 .div__types {
       width: 25%;
@@ -305,42 +320,174 @@ h2 {
       background: var(--bgcolor_test);
 }
 
-.socials {
-      padding: 0.25rem;
-      padding-bottom: 1rem;
-      list-style-type: none;
+.social,
+.social::before {
+      position: absolute;
+}
+
+.section::before,
+.social-link::before {
+      content: " ";
+      position: absolute;
+}
+
+.social-list,
+.social-item,
+.social-link {
+      position: relative;
+}
+
+.social {
+      width: 100%;
+      height: auto;
       display: flex;
       justify-content: center;
-      gap: 3rem;
+      align-items: center;
+
+}
+
+.social::before {
+      bottom: 0;
+      width: 100%;
+      height: 50%;
+      z-index: 1;
+      backdrop-filter: blur(5px);
+}
+
+.social-list {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      z-index: 2;
+      list-style-type: none;
+}
+
+.social-item {
+      margin: 10px;
+}
+
+.social-link {
+      text-decoration: none;
+      width: 50px;
+      height: 50px;
+      border-radius: 10px;
+      background: linear-gradient(to bottom left, #210da1, #d802b1);
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      color: #fff;
+      font-size: 1.5em;
+      border: 1px solid rgba(255, 255, 255, 0.4);
+      border-inline-end: 1px solid rgba(255, 255, 255, 0.2);
+      border-block-end: 1px solid rgba(255, 255, 255, 0.2);
+      box-shadow: 0 5px 25px rgba(255, 255, 255, 0.1);
+      backdrop-filter: blur(5px);
+      transition: 0.5s;
+      overflow: hidden;
+}
+
+.social-link:hover {
+      transform: translateY(-20px);
+      color: inherit;
+}
+
+.social-link::before {
+      top: 0;
+      left: 0;
+      width: 20px;
+      height: 100%;
+      background-color: rgba(255, 255, 255, 0.5);
+      transform: skewX(45deg) translateX(150px);
+      transition: 0.5s;
+}
+
+.social-link:hover::before {
+      transform: scaleX(45deg) translateX(-150px);
 }
 
 
 /* || MODIFIERS || */
 
-.img--chart {
-      border-radius: 0%;
-}
-
-.main__article--last {
-      flex-direction: column-reverse;
-}
-
-.description--p,
-.main__h1 {
-      position: relative;
-      z-index: 1;
-}
-
+/* general*/
 .a--nav {
       text-decoration: none;
-}
-
-.meeting--p,
-.tours--p {
-      margin-left: 15px;
-      padding: 5px 10px 30px 15px;
 }
 
 .li--types {
       padding-bottom: 15px;
 }
+
+.main__h2 {
+      position: relative;
+      z-index: 1;
+}
+
+/* description */
+.description--img {
+      display: flex;
+      position: absolute;
+      border-radius: 0px;
+      min-height: 150px;
+      max-height: 300px;
+      width: inherit;
+      left: calc(35px + 1rem);
+      top: 145px;
+
+}
+
+.description--headset {
+      border-radius: 0px;
+}
+
+.description--p {
+      margin-left: 15px;
+      padding: 10px 10px 30px 15px;
+      position: relative;
+      z-index: 1;
+}
+
+
+/* types */
+
+/* education */
+.education--p {
+      margin-left: 15px;
+      padding: 10px 10px 30px 15px;
+}
+
+/* games */
+.games--p {
+      margin-left: 15px;
+      padding: 10px 10px 30px 15px;
+}
+
+
+/* tours */
+.tours--p {
+      margin-left: 15px;
+      padding: 10px 10px 30px 15px;
+}
+
+
+/* meetings */
+.meeting--p {
+      margin-left: 15px;
+      padding: 10px 10px 30px 15px;
+}
+
+
+/* future */
+.img--chart {
+      border-radius: 0%;
+}
+
+.chart--caption {
+      font-size: 15px;
+}
+
+.main__article--last {
+      flex-direction: column;
+}
+
+
+/* footer*/
