--- a/css/style.css
+++ b/css/style.css
@@ -170,6 +170,8 @@ figcaption {
       margin: var(--margin);
       margin-top: 10px;
       max-width: 50%;
+      height: 450px;
+      justify-content: center;
       background-color: var(--bgcolor_test);
       color: var(--color);
       animation: showDescription 7s ease;
@@ -507,7 +509,7 @@ figcaption {
 /* BACKGROUND */
 
 .main__article {
-      background-image: radial-gradient(rgb(0, 0, 38),black);
+      background-image: radial-gradient(rgb(0, 0, 38), black);
       animation: showBackground 2s;
 }
 
@@ -542,9 +544,10 @@ figcaption {
       right: -0px;
       filter: blur(100px);
       animation: showColor3 4s;
+
 }
 
-@keyframes showColor1{
+@keyframes showColor1 {
       0% {
             opacity: 0%;
       }
@@ -554,7 +557,7 @@ figcaption {
       }
 }
 
-@keyframes showColor2{
+@keyframes showColor2 {
       0% {
             opacity: 0%;
       }
@@ -563,7 +566,7 @@ figcaption {
             opacity: 0%;
       }
 
-      100%{
+      100% {
             opacity: 100%;
       }
 }
@@ -585,11 +588,165 @@ figcaption {
 @keyframes showBackground {
       0% {
             opacity: 0%;
-            background-image: radial-gradient(rgb(0, 0, 38),black);
       }
 
       100% {
             opacity: 100%;
-            background-image: radial-gradient(rgb(0, 0, 38),black);
       }
+}
+
+
+
+
+/* .bottom {
+      display: flex;
+      height: 100px;
+      width: 50%;
+      align-items: center;
+      justify-content: space-around;
+} */
+/* .between {
+      width: 50px;
+      height: 50px;
+      background-color: yellow;
+} */
+
+/* .div__transition {
+      background-image: linear-gradient(to top, rgb(0, 0, 28), rgb(0, 0, 10));
+      display: flex;
+      height: 350px;
+      justify-content: space-around;
+      align-items: center;
+} */
+
+/* .div__transition2 {
+      background-image: linear-gradient(to bottom, rgb(0, 0, 28), rgb(0, 0, 10));
+      display: flex;
+      height: 350px;
+      justify-content: space-between;
+      align-items: center;
+} */
+
+/* .div__transition2 {
+      height: 350px;
+      display: grid;
+      grid-template-areas: 
+      'blank blank blank blank'
+      'blank blank blank color3'
+      'blank color4 blank blank';
+}
+
+.bg__color1 {
+      background-color: white;
+      height: 50px;
+      width: 50px;
+      grid-area: d1;
+}
+
+.bg__color2 {
+      background-color: white;
+      height: 50px;
+      width: 50px;
+      grid-area: d2;
+}
+
+.bg__color3 {
+      background-color: white;
+      height: 50px;
+      width: 50px;
+      grid-area: color3;
+}
+
+.bg__color4 {
+      background-color: white;
+      height: 50px;
+      width: 50px;
+      grid-area: color4;
+}
+
+.blank {
+      grid-area: blank;
+} */
+
+
+.transition {
+      background-image: linear-gradient(to top, rgb(0, 0, 28), rgb(0, 0, 10));
+      height: 350px;
+
+      display: grid;
+      align-items: center;
+      justify-items: center;
+      grid-template-columns: auto auto auto auto;
+      grid-template-rows: auto auto auto;
+      animation: showTransition 5s;
+}
+
+.grid-item1 {
+      height: 75px;
+      width: 75px;
+      background-color: #ac0d8a;
+      filter: blur(40px);
+}
+
+.grid-item7 {
+      height: 150px;
+      width: 150px;
+      background-color: rgb(3, 50, 170);
+      filter: blur(75px);
+}
+
+.grid-item10 {
+      height: 50px;
+      width: 50px;
+      background-color: rgb(153, 3, 170);
+      filter: blur(25px);
+}
+
+
+.transition2 {
+      background-image: linear-gradient(to bottom, rgb(0, 0, 28), rgb(0, 0, 10));
+      height: 350px;
+      animation: showTransition 5s;
+
+      display: grid;
+      align-items: center;
+      justify-items: center;
+      grid-template-columns: auto auto auto auto auto auto;
+      grid-template-rows: auto auto auto;
+}
+
+.grid2-item1 {
+      height: 70px;
+      width: 70px;
+      background-color: rgb(10, 28, 231);
+      filter: blur(50px);
+}
+
+.grid2-item12 {
+      height: 150px;
+      width: 150px;
+      background-color: rgb(87, 5, 137);
+      filter: blur(80px);
+}
+
+.grid2-item16 {
+      height: 70px;
+      width: 70px;
+      background-color: rgb(255, 0, 247);
+      filter: blur(50px);
+}
+
+@keyframes showTransition {
+      0% {
+            opacity: 0%;
+      }
+
+      50% {
+            opacity: 0%;
+      }
+
+      100% {
+            opacity: 100%;
+      }
+
 }
